# pyxiom

./: .flake8  1dError.py  expansion.py  expansionError.py  main.py  pyproject.toml  setup.cfg
githooks/: pre-commit
pyxiom/: __init__.py  cli.py  config.py  main.py  simulation.py  simulation_set.py  snapshot.py  time_series.py  utils.py
pyxiom/parameters/: __init__.py  parameters.py  special_params.py
pyxiom/plots/: __init__.py  expansion.py  ionization_fraction_over_time.py
styles/: plot.mlpstyle
