[tool.poetry]
name = "pyxiom"
version = "0.1.0"
description = ""
authors = ["tehforsch <mail@tonipeter.de>"]

[tool.poetry.dependencies]
python = "^3.7"
h5py = "^3.7.0"
astropy = "^5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
